Fixed: Incorrect toggle field wrapping

--- a/src/styles/themes/default/inputs.styl
+++ b/src/styles/themes/default/inputs.styl
@@ -22,7 +22,6 @@
   justify-content: space-between
   align-items: center
   padding: 0 16px
-  flex-wrap: wrap
   flex-shrink: 0
   cursor: pointer
   -moz-user-select: none
@@ -70,9 +69,6 @@
   align-self: flex-start
   color: var(--label-fg)
   transition: color var(--d-fast)
-
-.SelectField .label
-  size(max-w: 45%)
 
 // ---
 // -- Note
